[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Goblin/JumpGoblinRight.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Goblin.gd" type="Script" id=2]
[ext_resource path="res://Scripts/GoblinDamageArea.gd" type="Script" id=3]
[ext_resource path="res://Fonts/FreePixel.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 29.7588, 20.1222 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.9935, 10.0403 )

[sub_resource type="Animation" id=3]
resource_name = "minosHealth"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("HealthLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -87.6813, -60.8112 ), Vector2( -94, -60.811 ), Vector2( -80, -60.811 ), Vector2( -87.6813, -60.8112 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HealthLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "LeftAnim"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("GoblinCollision/GoblinSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 1, 3, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GoblinCollision/GoblinSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -15 ), Vector2( 0, -30 ), Vector2( 0, -15 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GoblinCollision/GoblinSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "RightAnim"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("GoblinCollision/GoblinSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GoblinCollision/GoblinSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -15 ), Vector2( 0, -30 ), Vector2( 0, -15 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GoblinCollision/GoblinSprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GoblinCollision/GoblinSprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[node name="Goblin" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="GoblinCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.556812, 0 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 4 )

[node name="GoblinCollision" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="GoblinSprite" type="Sprite" parent="GoblinCollision"]
texture = ExtResource( 1 )
hframes = 5

[node name="HealthLabel" type="Label" parent="GoblinCollision"]
margin_left = -87.6813
margin_top = -60.8112
margin_right = -39.6813
margin_bottom = -44.8112
custom_fonts/font = SubResource( 2 )
text = "Vida: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoblinCollider" type="CollisionShape2D" parent="GoblinCollision"]
visible = false
position = Vector2( -0.500565, 0 )
shape = SubResource( 1 )

[node name="Animator" type="AnimationPlayer" parent="GoblinCollision"]
anims/minosHealth = SubResource( 3 )

[node name="CannonSpawner" type="Position2D" parent="."]
position = Vector2( 0, -15.4597 )

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.3

[node name="ChangeSceneCooldown" type="Timer" parent="."]
wait_time = 0.2

[node name="WalkAnimation" type="AnimationPlayer" parent="."]
anims/LeftAnim = SubResource( 6 )
anims/RightAnim = SubResource( 5 )
[connection signal="canQueueFree" from="GoblinCollision" to="." method="canDestroy"]
[connection signal="timeout" from="ShootCooldown" to="." method="onShootTimeout"]
[connection signal="timeout" from="ChangeSceneCooldown" to="." method="onTimerCooldown"]
